--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
-    "@ng-bootstrap/ng-bootstrap": "^16.0.0-rc.2",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.4.10",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
     "zone.js": "~0.14.3"
